[package]
name = "rs-fluids"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.5.0"
egui = "0.13.1"
macroquad = "0.3.7"
rand = "0.8.4"
rand_distr = "0.4.1"
nalgebra = "0.28.0"
nalgebra-sparse = "0.4.0"

# Adding the following snippet 
# ensures that all dependencies compile in release even in debug mode.
[profile.dev.package.'*']
opt-level = 3